@@ -1,5 +1,4 @@
 package controller.staff.exam;
-
 import dto.AutoAllocateResultDTO;
 import dto.CandidateCallBoardStateDTO;
 import dto.CandidateEnrollmentDTO;
@@ -23,70 +22,55 @@ import java.util.Map;
 import model.Payment;
 import model.User;
 import service.AuditLogService;
-import service.CandidateCallBoardService;
 import service.CandidatePhotoService;
 import service.ExamRegistrationService;
 import service.ExaminerAllocationService;
 import service.impl.AuditLogServiceImpl;
-import service.impl.CandidateCallBoardServiceImpl;
 import service.impl.CandidatePhotoServiceImpl;
 import service.impl.ExamRegistrationServiceImpl;
 import service.impl.ExaminerAllocationServiceImpl;
-
 @WebServlet("/views/staff/exam/procedure")
 public class ProcedureServlet extends HttpServlet {
-
     private static final double EXAM_FEE = 200_000.00;
     private static final String MSG_PHOTO_REQUIRED = "Vui lòng chụp ảnh chân dung trước khi thu phí.";
     private static final String MSG_PAYMENT_FAILED = "Không thể ghi nhận thanh toán. Vui lòng thử lại.";
-
+    private static final String CALL_BOARD_CONTEXT_KEY = "candidateCallBoards";
     private final AuditLogService auditLogService = new AuditLogServiceImpl();
     private final ExamRegistrationService regService = new ExamRegistrationServiceImpl();
     private final CandidatePhotoService photoService = new CandidatePhotoServiceImpl();
-    private final CandidateCallBoardService callBoardService = new CandidateCallBoardServiceImpl();
     private final ExaminerAllocationService allocator = new ExaminerAllocationServiceImpl();
-
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         HttpSession session = request.getSession();
         String webRoot = request.getServletContext().getRealPath("/");
-
         int examSessionId = resolveSessionId(session, null, null);
         List<CandidateEnrollmentDTO> qList = refreshQueueFromDb(session, webRoot, examSessionId);
-
         String sbdParam = resolveSbd(request, session);
         boolean sbdChanged = trackSbdChange(session, sbdParam);
-
         CandidateEnrollmentDTO profile = loadProfileFromDb(webRoot, examSessionId, sbdParam, qList);
         session.setAttribute("candidateQueue", qList);
-
         if (profile != null && !profile.isPresent()) {
             if (regService.updatePresent(profile.getId(), true)) {
                 profile = reloadProfileAfterMutation(webRoot, examSessionId, profile.getId(), sbdParam, qList);
                 session.setAttribute("candidateQueue", qList);
             }
         }
-
         String stepParam = resolveStep(request, session, profile, sbdChanged);
         boolean hasValidPhoto = profile != null && profile.isValidCapturedPhoto();
-
         if ("3".equals(stepParam) && profile != null && !hasValidPhoto && !profile.isPaymentCompleted()) {
             stepParam = "2";
             request.setAttribute("photoRequiredMsg", MSG_PHOTO_REQUIRED);
         }
-
         session.setAttribute("procedureStep", stepParam);
         request.setAttribute("step", stepParam);
         request.setAttribute("hasValidPhoto", hasValidPhoto);
-
         String action = request.getParameter("action");
         if ("nextCandidate".equals(action)) {
             advanceToNextCandidate(session, qList, webRoot, resolveSessionId(session, profile, qList));
             response.sendRedirect("candidatecall");
             return;
         }
-
         if ("saveProfile".equals(action) && profile != null) {
             handleSaveProfile(request, session, webRoot, examSessionId, sbdParam, qList, profile);
             profile = (CandidateEnrollmentDTO) request.getAttribute("profile");
@@ -96,7 +80,6 @@ public class ProcedureServlet extends HttpServlet {
             hasValidPhoto = profile != null && profile.isValidCapturedPhoto();
             request.setAttribute("hasValidPhoto", hasValidPhoto);
         }
-
         if ("recapture".equals(action) && profile != null) {
             regService.updatePhoto(profile.getId(), null);
             profile = reloadProfileAfterMutation(webRoot, examSessionId, profile.getId(), sbdParam, qList);
@@ -108,29 +91,24 @@ public class ProcedureServlet extends HttpServlet {
             request.setAttribute("profile", profile);
             addAuditLog(session, "UPDATE on Person", "Xóa ảnh chân dung để chụp lại SBD " + sbdParam);
         }
-
         if ("saveCapturedPhoto".equals(action)) {
             handleSaveCapturedPhoto(request, response, session, sbdParam, qList, webRoot);
             return;
         }
-
         if ("confirmPayment".equals(action) && profile != null) {
             processPayment(request, response, session, profile, sbdParam, qList, webRoot);
             return;
         }
-
         if ("true".equals(request.getParameter("paymentSuccess")) && profile != null) {
             if (handlePaymentSuccess(request, response, session, profile, sbdParam, qList, webRoot)) {
                 return;
             }
         }
-
         if (profile != null) {
             request.setAttribute("profile", profile);
         }
         forwardDeskView(request, response);
     }
-
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
@@ -148,7 +126,6 @@ public class ProcedureServlet extends HttpServlet {
         }
         doGet(request, response);
     }
-
     private void handleSaveProfile(HttpServletRequest request, HttpSession session, String webRoot,
             int examSessionId, String sbdParam, List<CandidateEnrollmentDTO> qList,
             CandidateEnrollmentDTO profile) {
@@ -157,11 +134,9 @@ public class ProcedureServlet extends HttpServlet {
         String govIdNo = request.getParameter("govIdNo");
         String email = request.getParameter("email");
         String phoneNo = request.getParameter("phoneNo");
-
-        if (dobStr == null || dobStr.trim().isEmpty()) {
+        if (dobStr == null || dobStr.isBlank()) {
             return;
         }
-
         try {
             Date sqlDob;
             if (dobStr.contains("/")) {
@@ -173,7 +148,6 @@ public class ProcedureServlet extends HttpServlet {
             } else {
                 sqlDob = Date.valueOf(dobStr);
             }
-
             if (regService.updateProfile(profile.getId(), fullName, sqlDob, govIdNo, email, phoneNo)) {
                 profile = reloadProfileAfterMutation(webRoot, examSessionId, profile.getId(), sbdParam, qList);
                 session.setAttribute("candidateQueue", qList);
@@ -186,7 +160,6 @@ public class ProcedureServlet extends HttpServlet {
             e.printStackTrace();
         }
     }
-
     private boolean handlePaymentSuccess(HttpServletRequest request, HttpServletResponse response,
             HttpSession session, CandidateEnrollmentDTO profile, String sbdParam,
             List<CandidateEnrollmentDTO> qList, String webRoot) throws IOException, ServletException {
@@ -207,7 +180,6 @@ public class ProcedureServlet extends HttpServlet {
         }
         return false;
     }
-
     private void processPayment(HttpServletRequest request, HttpServletResponse response,
             HttpSession session, CandidateEnrollmentDTO profile, String sbdParam,
             List<CandidateEnrollmentDTO> qList, String webRoot) throws IOException, ServletException {
@@ -242,19 +214,16 @@ public class ProcedureServlet extends HttpServlet {
         advanceToNextCandidate(session, qList, webRoot, profile.getExamSessionId());
         response.sendRedirect("candidatecall");
     }
-
     private boolean completePayment(HttpSession session, CandidateEnrollmentDTO profile,
             String sbdParam, String webRoot) {
         Payment payment = new Payment();
-        payment.setCandidateId(profile.getId());
         if (profile.getEnrollment() != null) {
             payment.setExamEnrollmentId(profile.getEnrollment().getExamEnrollmentId());
         }
         payment.setTotalAmount(EXAM_FEE);
-        payment.setPaymentStatus("Completed");
+        payment.setPaymentStatus(enums.PaymentStatus.HOAN_TAT.getDisplayName());
         payment.setPaymentMethod("Cash");
         payment.setTransactionReference("REF-" + System.currentTimeMillis() % 1_000_000);
-
         boolean updatedPay = regService.insertPayment(payment);
         if (!updatedPay) {
             updatedPay = regService.updatePayment(profile.getId(), true);
@@ -262,23 +231,19 @@ public class ProcedureServlet extends HttpServlet {
         if (!updatedPay) {
             return false;
         }
-
         profile.setIsPaymentCompleted(true);
         profile.setIsPresent(true);
         regService.updatePresent(profile.getId(), true);
         if (profile.isAbsent()) {
             clearAbsentMarking(profile);
         }
-
         AutoAllocateResultDTO allocResult = allocator.autoAllocateCandidate(
                 profile.getExamSessionId(), profile.getId());
-
         List<CandidateEnrollmentDTO> qList = regService.getCandidatesBySession(profile.getExamSessionId());
         photoService.normalizeQueue(webRoot, qList);
         session.setAttribute("candidateQueue", qList);
         session.setAttribute("lastLoadedSessionId", profile.getExamSessionId());
         session.setAttribute("selectedSessionId", profile.getExamSessionId());
-
         String allocDetail = allocResult.allocatedCount > 0
                 ? "Phân bổ " + allocResult.allocatedCount + " giám khảo"
                 : "Không phân bổ được giám khảo tự động";
@@ -290,12 +255,10 @@ public class ProcedureServlet extends HttpServlet {
         }
         return true;
     }
-
     private void handleSaveCapturedPhoto(HttpServletRequest request, HttpServletResponse response,
             HttpSession session, String sbdParam, List<CandidateEnrollmentDTO> qList, String webRoot)
             throws IOException {
         response.setContentType("application/json;charset=UTF-8");
-
         int examSessionId = resolveSessionId(session, null, qList);
         CandidateEnrollmentDTO profile = loadProfileFromDb(webRoot, examSessionId, sbdParam, qList);
         if (profile == null) {
@@ -303,7 +266,6 @@ public class ProcedureServlet extends HttpServlet {
                     false, "Không tìm thấy thí sinh.", null);
             return;
         }
-
         String base64Data = request.getParameter("photoBase64");
         String ext = null;
         if (base64Data != null && base64Data.startsWith("data:image/png;base64,")) {
@@ -316,32 +278,27 @@ public class ProcedureServlet extends HttpServlet {
                     false, "Định dạng ảnh không hợp lệ.", null);
             return;
         }
-
         try {
             String base64Image = base64Data.substring(base64Data.indexOf(',') + 1);
             byte[] imageBytes = Base64.getDecoder().decode(base64Image);
             if (imageBytes.length == 0) {
                 throw new IllegalArgumentException("Ảnh rỗng");
             }
-
             String uploadDir = webRoot + "assets/imgs/candidates/";
             File dir = new File(uploadDir);
             if (!dir.exists() && !dir.mkdirs()) {
                 throw new IOException("Không tạo được thư mục lưu ảnh: " + uploadDir);
             }
-
             String safeSbd = sbdParam.replaceAll("[^A-Za-z0-9\\-]", "_");
             String fileName = safeSbd + "_captured." + ext;
             File file = new File(dir, fileName);
             try (FileOutputStream fos = new FileOutputStream(file)) {
                 fos.write(imageBytes);
             }
-
             String photoPath = "assets/imgs/candidates/" + fileName;
             if (!regService.updatePhoto(profile.getId(), photoPath)) {
                 throw new IOException("Không cập nhật được photoUrl trong DB");
             }
-
             profile = reloadProfileAfterMutation(webRoot, examSessionId, profile.getId(), sbdParam, qList);
             if (profile != null) {
                 profile.setValidCapturedPhoto(true);
@@ -350,7 +307,6 @@ public class ProcedureServlet extends HttpServlet {
             session.setAttribute("procedureStep", "2");
             addAuditLog(session, "UPDATE on Person",
                     "Lưu ảnh chụp từ webcam thực tế SBD " + sbdParam, profile != null ? profile.getId() : 0);
-
             writeJson(response, HttpServletResponse.SC_OK, true, null, photoPath);
         } catch (Exception e) {
             e.printStackTrace();
@@ -358,7 +314,6 @@ public class ProcedureServlet extends HttpServlet {
             writeJson(response, HttpServletResponse.SC_INTERNAL_SERVER_ERROR, false, msg, null);
         }
     }
-
     private void writeJson(HttpServletResponse response, int status, boolean success,
             String message, String photoUrl) throws IOException {
         response.setStatus(status);
@@ -372,18 +327,16 @@ public class ProcedureServlet extends HttpServlet {
         json.append("}");
         response.getWriter().write(json.toString());
     }
-
     private String escapeJson(String value) {
         return value.replace("\\", "\\\\").replace("\"", "\\\"");
     }
-
     private String resolveStep(HttpServletRequest request, HttpSession session,
             CandidateEnrollmentDTO profile, boolean sbdChanged) {
         String stepParam = request.getParameter("step");
         if (sbdChanged) {
             return "1";
         }
-        if (stepParam != null && !stepParam.trim().isEmpty()) {
+        if (stepParam != null && !stepParam.isBlank()) {
             return stepParam;
         }
         if (profile == null) {
@@ -397,10 +350,9 @@ public class ProcedureServlet extends HttpServlet {
         }
         return "1";
     }
-
     private boolean trackSbdChange(HttpSession session, String sbdParam) {
         String prevSbd = (String) session.getAttribute("lastSelectedSbd");
-        if (sbdParam != null && !sbdParam.trim().isEmpty()) {
+        if (sbdParam != null && !sbdParam.isBlank()) {
             boolean changed = prevSbd == null || !prevSbd.equals(sbdParam);
             session.setAttribute("lastSelectedSbd", sbdParam);
             session.setAttribute("callingSbd", sbdParam);
@@ -409,13 +361,11 @@ public class ProcedureServlet extends HttpServlet {
         session.setAttribute("lastSelectedSbd", null);
         return false;
     }
-
     private void forwardDeskView(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         request.setAttribute("deskMode", Boolean.TRUE);
         request.getRequestDispatcher("/views/staff/exam/candidatecall.jsp").forward(request, response);
     }
-
     private List<CandidateEnrollmentDTO> refreshQueueFromDb(HttpSession session, String webRoot, int examSessionId) {
         List<CandidateEnrollmentDTO> qList;
         try {
@@ -430,7 +380,6 @@ public class ProcedureServlet extends HttpServlet {
         session.setAttribute("selectedSessionId", examSessionId);
         return qList;
     }
-
     private CandidateEnrollmentDTO loadProfileFromDb(String webRoot, int examSessionId, String sbdParam,
             List<CandidateEnrollmentDTO> qList) {
         Integer sbd = parseSbdParam(sbdParam);
@@ -452,7 +401,6 @@ public class ProcedureServlet extends HttpServlet {
         }
         return profile;
     }
-
     private CandidateEnrollmentDTO reloadProfileAfterMutation(String webRoot, int examSessionId, int candidateId,
             String sbdParam, List<CandidateEnrollmentDTO> qList) {
         CandidateEnrollmentDTO fresh = regService.getById(candidateId);
@@ -463,20 +411,17 @@ public class ProcedureServlet extends HttpServlet {
         syncProfileInQueue(qList, fresh);
         return fresh;
     }
-
     private List<CandidateEnrollmentDTO> loadQueue(HttpSession session, String webRoot) {
         int examSessionId = resolveSessionId(session, null, null);
         return refreshQueueFromDb(session, webRoot, examSessionId);
     }
-
     private String resolveSbd(HttpServletRequest request, HttpSession session) {
         String sbdParam = request.getParameter("sbd");
-        if (sbdParam == null || sbdParam.trim().isEmpty()) {
+        if (sbdParam == null || sbdParam.isBlank()) {
             sbdParam = (String) session.getAttribute("callingSbd");
         }
         return sbdParam;
     }
-
     private void syncProfileInQueue(List<CandidateEnrollmentDTO> qList, CandidateEnrollmentDTO refreshed) {
         for (int i = 0; i < qList.size(); i++) {
             if (qList.get(i).getId() == refreshed.getId()) {
@@ -485,7 +430,6 @@ public class ProcedureServlet extends HttpServlet {
             }
         }
     }
-
     private void clearAbsentMarking(CandidateEnrollmentDTO profile) {
         regService.clearAbsentMarking(profile.getId());
         profile.setAbsent(false);
@@ -496,7 +440,6 @@ public class ProcedureServlet extends HttpServlet {
         profile.setPracticalScore(null);
         profile.setRoadTestScore(null);
     }
-
     private int resolveSessionId(HttpSession session, CandidateEnrollmentDTO profile,
             List<CandidateEnrollmentDTO> qList) {
         if (profile != null && profile.getExamSessionId() > 0) {
@@ -511,19 +454,16 @@ public class ProcedureServlet extends HttpServlet {
         }
         return 2;
     }
-
     private void advanceToNextCandidate(HttpSession session, List<CandidateEnrollmentDTO> qList,
             String webRoot, int examSessionId) {
         session.setAttribute("lastSelectedSbd", null);
         session.setAttribute("procedureStep", "1");
         session.removeAttribute("procedureJustPaid");
-
         qList = regService.getCandidatesBySession(examSessionId);
         photoService.normalizeQueue(webRoot, qList);
         session.setAttribute("candidateQueue", qList);
         session.setAttribute("lastLoadedSessionId", examSessionId);
         session.setAttribute("selectedSessionId", examSessionId);
-
         String nextSbd = null;
         for (CandidateEnrollmentDTO c : qList) {
             if (!(c.isPaymentCompleted() && c.isValidCapturedPhoto())) {
@@ -532,17 +472,15 @@ public class ProcedureServlet extends HttpServlet {
             }
         }
         session.setAttribute("callingSbd", nextSbd);
-        CandidateCallBoardStateDTO state = callBoardService.getState(getServletContext(), examSessionId);
+        CandidateCallBoardStateDTO state = getCallBoardState(examSessionId);
         if (state != null) {
             state.setCallingSbd(nextSbd);
             state.setShiftEnded(false);
         }
     }
-
     private void addAuditLog(HttpSession session, String action, String details) {
         addAuditLog(session, action, details, 0);
     }
-
     private void addAuditLog(HttpSession session, String action, String details, int recordId) {
         List<Map<String, String>> sessionAuditLogs
                 = (List<Map<String, String>>) session.getAttribute("sessionAuditLogs");
@@ -556,7 +494,6 @@ public class ProcedureServlet extends HttpServlet {
         audit.put("action", action);
         audit.put("details", details);
         sessionAuditLogs.add(0, audit);
-
         int userId = 3;
         Object userObj = session.getAttribute("user");
         if (userObj instanceof User) {
@@ -564,7 +501,6 @@ public class ProcedureServlet extends HttpServlet {
         }
         auditLogService.logAction(userId, action, details, recordId);
     }
-
     private static Integer parseSbdParam(String raw) {
         if (raw == null || raw.isBlank()) {
             return null;
@@ -575,5 +511,24 @@ public class ProcedureServlet extends HttpServlet {
         } catch (NumberFormatException e) {
             return null;
         }
+    }
+    @SuppressWarnings("unchecked")
+    private CandidateCallBoardStateDTO getCallBoardState(int examSessionId) {
+        if (examSessionId <= 0) {
+            return null;
+        }
+        jakarta.servlet.ServletContext ctx = getServletContext();
+        Map<Integer, CandidateCallBoardStateDTO> boards =
+                (Map<Integer, CandidateCallBoardStateDTO>) ctx.getAttribute(CALL_BOARD_CONTEXT_KEY);
+        if (boards == null) {
+            synchronized (ctx) {
+                boards = (Map<Integer, CandidateCallBoardStateDTO>) ctx.getAttribute(CALL_BOARD_CONTEXT_KEY);
+                if (boards == null) {
+                    boards = new HashMap<>();
+                    ctx.setAttribute(CALL_BOARD_CONTEXT_KEY, boards);
+                }
+            }
+        }
+        return boards.computeIfAbsent(examSessionId, id -> new CandidateCallBoardStateDTO());
     }
 }
